--- a/Explorer/src/styles.css
+++ b/Explorer/src/styles.css
@@ -21,7 +21,6 @@ html, body { height: 100%; }
   h1, h2, h3, h4, h5, h6 {
     font-family: var(--font-family);
     color: var(--accent-color);
-    margin-bottom: 10px;
   }
   
   .book-now-section {
